erDiagram
    Users {
        int id PK
        string username
        string password_hash
        string role "owner | visitor"
        datetime created_at
        datetime last_login_at
        boolean is_active
        boolean can_upload
        boolean can_delete_own_files
        boolean has_upload_limits
        int upload_limit
        boolean is_deleted
        datetime deleted_at
    }

    Files {
        int id PK
        string name
        string internal_path
        int size_bytes
        string mime_type
        int uploaded_by FK
        datetime uploaded_at
        boolean is_deleted
        boolean is_public
        datetime deleted_at
    }

    FilePermissions {
        int id PK
        int file_id FK
        int user_id FK
        string access_level "viewer | collaborator"
        datetime granted_at
        int granted_by FK
    }

    AuditLog {
        int id PK
        datetime timestamp
        int user_id FK
        string event_type
        string description
        string ip_address
        int file_id FK
        boolean success
    }

    Users ||--o{ Files : uploaded_by
    Users ||--o{ FilePermissions : user_id
    Users ||--o{ FilePermissions : granted_by
    Users ||--o{ AuditLog : user_id
    Files ||--o{ FilePermissions : file_id
    Files ||--o{ AuditLog : file_id
